<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Blaze Browser</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="refresh">Refresh</string>
    <string name="home">Home</string>
    <string name="tabs">Tabs</string>
    <string name="new_tab">New Tab</string>
    <string name="url_hint">Search or enter address</string>
    <string name="mode_normal">Mode: Normal</string>
    <string name="mode_secret">Mode: Secret</string>
    <string name="search_engine">Search Engine</string>
    <string name="select_engine">Select Engine</string>
    <string name="add_engine">Add Custom Engine</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="history">History</string>
    <string name="find_in_page">Find in Page</string>
    <string name="temp_mail">Temp Mail</string>
    <string name="network_settings">Network Settings</string>
    <string name="blaze_ai">BlazeAI</string>
    <string name="blaze_link">Blaze Link</string>
</resources>