<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuMode"
        android:title="@string/mode_normal"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuSearchEngine"
        android:title="@string/search_engine"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/menuSelectEngine"
                android:title="@string/select_engine" />
            <item
                android:id="@+id/menuAddSearchEngine"
                android:title="@string/add_engine" />
        </menu>
    </item>

    <item
        android:id="@+id/menuBookmarks"
        android:title="@string/bookmarks"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuAddBookmark"
        android:title="@string/add_bookmark"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuHistory"
        android:title="@string/history"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuFind"
        android:title="@string/find_in_page"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuTempMail"
        android:title="@string/temp_mail"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuNetworkSettings"
        android:title="@string/network_settings"
        app:showAsAction="never" />

</menu>